src/Components/AddDataSection/style.css
.add-data-container{
  padding: 30px 20px;
  background-color: #F3F7FE;
  border-radius: 10px;
  display: flex;
 flex-direction: column;
 gap: 20px;
}

.data-input-section{
    display: flex;
    gap: 20px;
}

.input-container{
    width: 48%;
    display: flex;
    gap: 25px;
    flex-direction: column;
}

.input-container p{

font-weight: 600;
font-size: 24px;
text-transform: capitalize;
color : #161616;
text-align : left;


}
.action-container{
    display: flex;
    justify-content: space-between;
}

.action-container button { 
    background : #100069;
    border : .5px solid #100069;
width: 35%;

padding: 10px;
font-weight: 600;
font-size: 16px;
color : #FFFFFF;
border-radius: 4px;
cursor: pointer;
}
.action-container button:disabled{
background-color: #1000695C;
border: none;   /* Gray out */
  cursor: not-allowed; 
}
.action-container input{
    width: 60%;
    height: 42px;
    padding: 0 20px;
    border: 2px solid #A7A7A7;
    border-radius: 5px;
   font-weight: 500;
   font-size: 16px;
   color: #586071;
}

.upload-section{
    width: 48%;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    gap: 20px;
}

/* The .upload-input class is hidden because it is paired with the .upload-label class for styling purposes. 
   Users interact with the .upload-label element, which triggers the hidden input element for file uploads. */
.upload-input {
  display: none;
  border: 2px solid red;
}

.upload-label {
  display: inline-block;
  width: 531px;
  height: 64px;
  background-color: #100069;
  color: white;
  font-weight: 600;
  font-size: 16px;
  border-radius: 15px;
  text-align: center;
  line-height: 64px;
  cursor: pointer;
}

.data {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  gap: 15px;
  width: 100%;
}

.data-item{
    display: flex;
    width: 100%;
    height: auto;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    padding-top: 10px;
}
.data-item p {
font-weight: 500;
font-size: 16px;
color : #000000;
text-align: left;
}
.info p {
    width: 90%;
    height: 42px;
    display: flex
;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    border: none;
    background-color: #E7E7E7;
    font-weight: 600;
    font-size: 16px;
    color: #4F4F4F;
    padding: 5px 10px;
    text-align: center;
}





.data div:last-child label{
   width: auto;
   gap: 0px;
   padding-top: 0;

}
.data div:last-child  input{
   width: 165px;
}


@media(max-width: 1300px){
    .data div:last-child{
        gap: 0;
        padding-top: 0;
        
    }

}

@media(max-width: 768px){

    
    .input-container{
     display: flex;
     width: 100%; 
     flex-direction: column;
     gap: 15px;
}
.data-input-section{
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.action-container{
   flex-direction: column;
   gap: 10px;
}
.action-container input{
    width: 100%;
    height: 35px;
   color: #586071;
  font-weight: 500;
font-size: 14px;
padding: 0 10px;

}
.action-container button{
    width: 100%;
}
.upload-section{
    width: 100%;
}
    .upload-label {
        height: 45px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 9.6px;
        font-size: 14px;
        width: 100%;
    }
  .data{
     display: grid;
      grid-template-columns: repeat(2, 1fr);
  }
.data-item{
    width: 100%;
}

.data .data-item:last-child{
     grid-column: span 2;
}
.data div:last-child{
    gap: 10px;
}
.info p{
    width: 100%;
    word-break: break-word;

}

.input-container p{

font-weight: 500;
font-size: 12px;
 color : #9F9F9F;
}
.action-container button{
font-weight: 600;
font-size: 14px;
}

}

